--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-loader": "^8.1.0",
     "css-loader": "^3.6.0",
     "express": "^4.17.1",
+    "file-loader": "^6.0.0",
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
